--- a/technovation/Fall2022/current.html
+++ b/technovation/Fall2022/current.html
@@ -237,6 +237,8 @@
                 <li><a href="VirtualLessons/week6lessonvirtual.pdf" target="_blank" download>Week 6</a></li>
 
                 <li><a href="VirtualLessons/Week7Lesson-Virtual.pdf" target="_blank" download>Week 7</a></li>
+
+                <li><a href="VirtualLessons/greenlesson8.pdf" target="_blank" download>Week 8</a></li>
             </ul>
              
 
