--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -225,6 +225,145 @@
     </section> <!-- end Week n section //>
     -->
 
+    <section class="news bg-light-gray">  <!-- begin Week 8 section -->
+        <div class="container">
+            <h2>Week 8</h2>
+            <h4>Ready to Go?</h4>
+            <p>
+                Already our last week? We're so proud of the Students for all their work over the last 8 weeks. We're so excited to see their final projects!
+            </p>
+            <p>
+                Our students jumped into their final projects on Saturday, unleashing their creativity in full force through the curves and contours drawn by our favorite Python-powered mascot, Tracy the Turtle. Building upon the final project blueprints laid at last Saturday's meeting, students wasted no time getting to work! As soon as they'd been cleared for takeoff, our students tilted their wings back and took flight, trusting that their curiosity would keep them afloat. Indeed, it did&mdash;the only time students came back down to Earth was at the end of our meeting!
+            </p>
+            <p>
+                Before we dive into a full recap of our meeting, we've got a few key announcements to share.
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Announcements</h4>
+            <ul>
+                <h4>1. Bonus Hour</h4>
+                <p>
+                    We'll be hosting our final Bonus Hour this Thursday from 7-8p ET, and invite all Technovation participants to join us. At least two Technovation mentors will be available on Zoom during the bonus hour to help with final projects, or to talk about computer science in general! Join us at the link below:
+                </p>
+                <ul>
+                    <li style="list-style: disc">Bonus Hour Zoom: <a href=" https://msu.zoom.us/j/92645747814"> zoom</a> (password: see email)</li>
+                </ul>
+                <h4>2. Curriculum Check-In</h4>
+                <p>
+                    This coming Saturday marks Week 9&mdash;our final week of the fall! We'll be dedicating the meeting to a final project wrap-up and presentation, in addition to a guest spotlight and certificate of completion ceremony. Let's finish strong!
+                </p>
+                <h4>3. Looking Ahead</h4>
+                <p>
+                    We'll see you again this Saturday, 11/19 at 10:30a ET for our final Technovation meeting of the fall! Zoom links will be the same as those used last week&mdash;we will send them out again on Saturday morning if you've lost them.
+                </p>
+                <h4>4. Spring Interest Form </h4>
+                <p>
+                    This spring, we will be offering Spartan Girls Who Code, an MSU student-led coding club introducing 6-12th grade students to the wide world of computing. Combining games and mini-projects with guest speakers and team-building activities, SGWC is more than just another extracurricular—it’s a community. We believe coding should be fun, and we aim to make it so! There will be both in-person and virtual sessions, local students are highly encouraged to
+                    register for the in person sessions. We will be teaching a web development curriculum, using both HTML and CSS.
+                </p>
+                <ul>
+                    <li style="list-style: disc">Forms: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBmeCXRAYqxDDvTxLiLj3nOXTtMgHWG7GgGEEBJjwHt9zzcQ/viewform"> In-Person</a> 
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOlTNcbdzC30gg9SvtPmmKOi7AYHePlRMIle6ROjWcLdddig/viewform"> Virtual</a> </li>
+                </ul>
+                <h4>5. Questions?</h4>
+                <p>
+                    As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                </p>
+            </ul>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Meeting Recap</h4>
+            <p>
+                <b>Virtual</b> Students broke the ice with a Meme Icebreaker describing their week!
+                <a href="https://docs.google.com/presentation/d/1tdvn7qo0TSVRb-JI4VcmBjqZf5nnTCpFdoC077zLbQ4/edit#slide=id.g18bb39ce084_9_0">Memes!</a>
+                Students and mentors had a lot of fun finding memes to describe how their week went!
+            </p>
+            
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week6/icebreaker.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week6/icebreaker1.png" width=90%>
+                    </div>
+                </div><br>
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week6/icebreaker3.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week6/icebreaker4.png" width=90%>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i><p><i>Here are some of the students memes from Saturday!</i></p>
+                </div>
+            </div>
+
+            <p>
+                <b>In-Person</b> and <b>Virtual</b> Cohorts continued to review and work on their Final Projects.
+            </p>
+           
+            <p>
+                The remainder of Saturday's meeting was reserved for final project work time. Aside from a brief set of 2 mentor : 1 student check-ins to answer questions, address concerns, discuss new ideas and troubleshoot bugs, mentors left students with clear airspace to continue implementing their final projects. We're happy to report that every student hit cruising altitude&mdash;every student's takeoff was successful!
+            </p>
+            <p>
+                Next Saturday, students will have the opportunity to showcase their projects at Week 9's Final Celebration! We're so proud of our students!
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Advisor Spotlight</h4>
+            <p>
+                Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford. This week, we'd like to introduce our faculty advisor Dr. Law!
+            </p>
+
+            <!------------------------------------------>
+
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-12" align="middle"> <!-- Law -->
+                        <img class="shadow-lg" src="assets/img/photos/website_Yann-Meing_Law.JPG" width=50%>
+                        <br><br>
+                        <p><i>Yann-Meing Law (Virtual/In-Person Advisor)</i></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12" align="middle"> <!-- Law -->
+                        <p>
+                            <b>What did you study?</b><br>
+                            I did my Phd in Engineering Mathematics and my bachelor in Biomedical Engineering at Polytechnique Montreal.                      </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            During a Scientific Computing course, I became passionate about numerical methods.                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            We developed a numerical method for the simulation of superconducting devices.                      </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            We want to develop a numerical method to simulate electromagnetic products.                         </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            I would suggest to reach out when they need help!                         </p>
+                    </div>
+                </div><br>
+            </div>
+            <p>
+                Stay positive, Technovators&mdash;we'll see you Saturday for Week 9's Final Celebration!
+            </p>
+            <p>
+                -The Technovation Team
+            </p>
+        </div>
+
+        </div>
+    </section> <!-- end Week 8 section -->
+
     <section class="news bg-light-gray">  <!-- begin Week 7 section -->
         <div class="container">
             <h2>Week 7</h2>
