--- a/technovation/Fall2022/current.html
+++ b/technovation/Fall2022/current.html
@@ -219,6 +219,8 @@
                 <li><a href="Fall2022/InPersonLessons/Week7-Lesson.pdf" target="_blank">Week 7</a></li>
 
                 <li><a href="Fall2022/InPersonLessons/Week8-Lesson.pdf" target="_blank">Week 8</a></li>
+
+                <li><a href="Fall2022/InPersonLessons/Week9-Lesson.pdf" target="_blank">Week 9</a></li>
             </ul>
             <p>
                 <b>Virtual Lessons</b>
