--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -225,6 +225,93 @@
     </section> <!-- end Week n section //>
     -->
 
+    <section class="news bg-light-gray">  <!-- begin Week 9 section -->
+        <div class="container">
+            <h2>Week 9</h2>
+            <h4>And just like that...</h4>
+            <p>
+                We're done! We're so proud of the Students for all their work over the last 9 weeks, we're so proud of all the progress the students made!
+            </p>
+            <p>
+                Before we dive into a full recap of our final meeting, we've got a few key announcements to share.
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Announcements</h4>
+            <ul>
+                <h4>1. Final Meeting</h4>
+                <p>
+                    Saturday, November 19th was our Final Meeting of our 9-week program. 
+                </p>
+                <h4>2. Looking Back </h4>
+                <p>
+                    Can you believe we're done? Time flies when you're having fun! Check out our <a href="current.html">current</a> page for the slides from each meeting.
+                </p>
+                <h4>3. Surverys</h4>
+                <p>
+                    If anyone forgot to fill out the Post-Partcipant Survey and Parent-Survey, please don't forget to fill those out. <a href="https://docs.google.com/forms/d/e/1FAIpQLSdPDw4BFhn-AlZQ9xbSOuyX31Pvl1KjRSYTAoFMQ01RIf3heA/viewform?usp=sf_link">Virtual Cohort Post-Participant Survey</a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSczq1_WRiOC63WtZx8EbfSTLi8P4PbVJR3Sl2ZEbaEr7fo-pw/viewform?usp=sf_link">In-Person Cohort Post-Participant Survey</a>, <a href="https://docs.google.com/forms/d/e/1FAIpQLSf-u8wWHP18OQq0DJrHzaJRVyc38p6vTTsGwJ0SvASD1WHdqw/viewform">Virtual Cohort Parent Survey</a>, and <a href="https://docs.google.com/forms/d/e/1FAIpQLScFSnGIg9Fm7Wk6z1hHSVbXfMf2sp57Tm6wXFiIm0HYt9Lgdg/viewform?usp=sf_link">In-Person Cohort Parent Survey</a> 
+                </p>
+                <h4>4. Spring Interest Form </h4>
+                <p>
+                    This spring, we will be offering Spartan Girls Who Code, an MSU student-led coding club introducing 6-12th grade students to the wide world of computing. Combining games and mini-projects with guest speakers and team-building activities, SGWC is more than just another extracurricular—it’s a community. We believe coding should be fun, and we aim to make it so! There will be both in-person and virtual sessions, local students are highly encouraged to
+                    register for the in person sessions. We will be teaching a web development curriculum, using both HTML and CSS.
+                </p>
+                <ul>
+                    <li style="list-style: disc">Forms: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBmeCXRAYqxDDvTxLiLj3nOXTtMgHWG7GgGEEBJjwHt9zzcQ/viewform"> In-Person</a> 
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOlTNcbdzC30gg9SvtPmmKOi7AYHePlRMIle6ROjWcLdddig/viewform"> Virtual</a> </li>
+                </ul>
+                <h4>5. Questions?</h4>
+                <p>
+                    As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                </p>
+            </ul>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Final Projects</h4>
+            <p>
+                We are so proud of the students and their creativity. Throughout these past 9 weeks we have been able to see the students grow and thrive as coders. On our final week we were able to highlight the students work with a project showcase from each cohort.  
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <iframe src="https://docs.google.com/presentation/d/1hTxxWs5FejODK4QWl-0hpIXOwc_6dFK74vjAFmgkCvA/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="100%" height="450" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </div>
+                <br>
+            </div>
+            <p>
+                <a href="https://docs.google.com/presentation/d/1hTxxWs5FejODK4QWl-0hpIXOwc_6dFK74vjAFmgkCvA/edit#slide=id.gcf926d7ad5_0_0"><b>In-Person Cohort</b></a>
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <iframe src="https://docs.google.com/presentation/d/1O0r68tMWNTNJsS7pDLE_LYa6T3VjGyt_GnOU3ucS5ss/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="100%" height="450" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </div>
+                <br>
+            </div>
+            <p>
+                <a href="https://docs.google.com/presentation/d/1O0r68tMWNTNJsS7pDLE_LYa6T3VjGyt_GnOU3ucS5ss/edit#slide=id.p"><b>White Cohort</b></a>
+            </p>
+            <div align="center" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <iframe src="https://docs.google.com/presentation/d/1NRvsI6BRWBuV03kDtBrMqUcAHegGwJNnvybAnHqdFjs/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="100%" height="450" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </div>
+                <br>
+            </div>
+            <p>
+                <a href="https://docs.google.com/presentation/d/1NRvsI6BRWBuV03kDtBrMqUcAHegGwJNnvybAnHqdFjs/edit#slide=id.g1934d4d08c9_0_60"><b>Green Cohort</b></a>
+        </p>
+
+            <p>
+                Congrats for completing the 9-week course, Technovators! We're so proud of all your hardwork.
+            </p>
+            <p>
+                -The Technovation Team
+            </p>
+        </div>
+
+        </div>
+    </section> <!-- end Week 8 section -->
+
     <section class="news bg-light-gray">  <!-- begin Week 8 section -->
         <div class="container">
             <h2>Week 8</h2>
