--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -250,7 +250,7 @@
                 </p>
                 <h4>3. Surverys</h4>
                 <p>
-                    If anyone forgot to fill out the Post-Partcipant Survey and Parent-Survey, please don't forget to fill those out. <a href="https://docs.google.com/forms/d/e/1FAIpQLSdPDw4BFhn-AlZQ9xbSOuyX31Pvl1KjRSYTAoFMQ01RIf3heA/viewform?usp=sf_link">Virtual Cohort Post-Participant Survey</a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSczq1_WRiOC63WtZx8EbfSTLi8P4PbVJR3Sl2ZEbaEr7fo-pw/viewform?usp=sf_link">In-Person Cohort Post-Participant Survey</a>, <a href="https://docs.google.com/forms/d/e/1FAIpQLSf-u8wWHP18OQq0DJrHzaJRVyc38p6vTTsGwJ0SvASD1WHdqw/viewform">Virtual Cohort Parent Survey</a>, and <a href="https://docs.google.com/forms/d/e/1FAIpQLScFSnGIg9Fm7Wk6z1hHSVbXfMf2sp57Tm6wXFiIm0HYt9Lgdg/viewform?usp=sf_link">In-Person Cohort Parent Survey</a> 
+                    If anyone forgot to fill out the Post-Partcipant Survey and Parent-Survey, please don't forget to fill those out. <a href="https://docs.google.com/forms/d/e/1FAIpQLSdPDw4BFhn-AlZQ9xbSOuyX31Pvl1KjRSYTAoFMQ01RIf3heA/viewform?usp=sf_link">Virtual Cohort Post-Participant Survey</a> , <a href="https://docs.google.com/forms/d/e/1FAIpQLSczq1_WRiOC63WtZx8EbfSTLi8P4PbVJR3Sl2ZEbaEr7fo-pw/viewform?usp=sf_link">In-Person Cohort Post-Participant Survey</a>, <a href="https://docs.google.com/forms/d/e/1FAIpQLSf-u8wWHP18OQq0DJrHzaJRVyc38p6vTTsGwJ0SvASD1WHdqw/viewform">Virtual Cohort Parent Survey</a>, and <a href="https://docs.google.com/forms/d/e/1FAIpQLScFSnGIg9Fm7Wk6z1hHSVbXfMf2sp57Tm6wXFiIm0HYt9Lgdg/viewform?usp=sf_link">In-Person Cohort Parent Survey</a> 
                 </p>
                 <h4>4. Spring Interest Form </h4>
                 <p>
