fix the embedding of the presentation

--- a/technovation/Fall2022/current.html
+++ b/technovation/Fall2022/current.html
@@ -241,6 +241,10 @@
                 <li><a href="VirtualLessons/Week7Lesson-Virtual.pdf" target="_blank" download>Week 7</a></li>
 
                 <li><a href="VirtualLessons/greenlesson8.pdf" target="_blank" download>Week 8</a></li>
+
+                <li><a href="VirtualLessons/virtual.pdf" target="_blank" download>Green Cohort Final Presentation</a></li>
+
+                <li><a href="VirtualLessons/virtualpres.pdf" target="_blank" download>White Cohort Final Presentation</a></li>
             </ul>
              
 
