start of SS23 website

--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -1,315 +1,1 @@
-<!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Team - MSU x PathLight Belize Coding Club</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
-
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x PathLight Coding Clubs Logo" /></span><span class="title">MSU x PathLight Coding Clubs</span>
-								</a>
-
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
-
-						</div>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="news.html">News</a></li>
-							<li><a href="clubs.html">Cohorts</a></li>
-							<li><a href="resources.html">Resources</a></li>
-							<li><a href="team.html">Team</a></li>
-							<li><a href="supporters.html">Supporters</a></li>
-						</ul>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<section>
-								<h1>Team</h1>
-								<div class="box alt">
-									<div class="row gtr-uniform">
-										<div class="col-12"><span class="image fit"><img src="images/2019 MSU mentors1152x326r72.jpg" alt="" /></span></div>
-
-										<!-- Mentors -->
-										<div class="col-12"><span><center><h2>MSU Student Mentors</h2></center></span></div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/andrew750x1000r72.jpg" alt="Photo of Andrew" /></span>
-											<center>
-												<h3>Andrew</h3>
-												Senior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/gigi750x1000r72.png" alt="Photo of Gigi" /></span>
-											<center>
-												<h3>Gigi</h3>
-												Senior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jonathan750x1000_78R.jpg" alt="Photo of Jonathon " /></span>
-											<center>
-												<h3>Jonathon</h3>
-												Senior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/katieA_750_1000_fixed72.jpg" alt="Photo of Katie A" /></span>
-											<center>
-												<h3>Katie A</h3>
-												Senior<br> Computer Engineering
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/sarah750x1000_78R.jpg" alt="Photo of Sarah" /></span>
-											<center>
-												<h3>Sarah</h3>
-												Senior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/katie750x1000_72R-2.jpg" alt="Photo of Katie W" /></span>
-											<center>
-												<h3>Katie W</h3>
-												Junior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/carolineGormely750x1000r72.jpeg" alt="Photo of Caroline" /></span>
-											<center>
-												<h3>Caroline</h3>
-												Junior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/meganGendjar750x1000r72.jpeg" alt="Photo of Megan" /></span>
-											<center>
-												<h3>Megan</h3>
-												Masters<br> Crop and Soil Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
-											<center>
-												<h3>Khushi</h3>
-												Junior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jessiccaHernandez750x1000_72R.png" alt="Photo of Jessicca" /></span>
-											<center>
-												<h3>Jessicca</h3>
-												Junior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/davidVanderSloot750x1000r72.jpg" alt="Photo of David" /></span>
-											<center>
-												<h3>David</h3>
-												Senior<br> Computational Data Science
-											</center>
-										</div>
-
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/ryan750x1000r72.png" alt="Photo of Ryan" /></span>
-											<center>
-												<h3>Ryan</h3>
-												Senior<br> Applied Engineering
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/daletyAveiro750x1000r72.jpeg" alt="Photo of Dalety" /></span>
-											<center>
-												<h3>Dalety</h3>
-												First Year<br>
-												Mechanical Engineering
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/joaoVitor750x1000_72R.jpeg" alt="Photo of Joao Vitor" /></span>
-											<center>
-												<h3>Joao Vitor</h3>
-												Junior<br>
-												Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/judy750x1000.jpg" alt="Photo of Joao Vitor" /></span>
-											<center>
-												<h3>Judy</h3>
-												Junior<br>
-												Computer Science
-											</center>
-										</div>
-
-
-										<!-- Advisors -->
-										<div class="col-12"><span><center><h2>MSU &amp; PathLight Advisers</h2><center></span></div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/consueloGodfrey750x1000.jpeg" alt="Photo of Consuelo" /></span>
-											<center>
-												<h3>Consuelo</h3>
-												Director of Teacher Training<br>PathLight International<br>Belize
-											</center>
-										</div>
-
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/teresa750x1000_78R.jpg" alt="Photo of Teresa" /></span>
-											<center>
-												<h3>Teresa</h3>
-												Director<br>WIE Recruitment &amp; K12 Outreach<br>MSU
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/LaurieCSforALL.jpg" alt="Photo of Laura" /></span>
-											<center>
-												<h3>Laura</h3>
-												Professor Emeritus<br> Comp. Sci. &amp; Eng.<br>MSU
-											</center>
-										</div>
-
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/emily750x1000_78R.jpg" alt="Photo of Emily" /></span>
-											<center>
-												<h3>Emily</h3>
-												Assistant Professor<br> Comp. Sci. &amp; Eng.<br>MSU
-											</center>
-										</div>
-
-
-
-									</div>
-								</div>
-							</section>
-						</div>
-					</div>
-
-				<!-- Footer -->
-					<!-- template version
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
-				-->
-
-				<footer id="footer">
-					<div class="inner">
-					<div class="box alt">
-						<div class="row gtr-uniform">
-
-									<!-- contact information -->
-									<div class="col-4">
-											<h4>Contact</h4>
-											428 S. Shaw Lane<br>
-											Engineering Building, Room 1410A<br>
-											Michigan State University<br>
-											East Lansing, MI 48824<br>
-											Phone: (517)884-0054<br>
-											Email: <a href="mailto:belizecc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">belizecc@egr.msu.edu</a>
-									</div>
-
-									<!-- links -->
-									<div class="col-4">
-											<h4>Links</h4>
-											<ul>
-													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
-													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
-													<li><a href="https://pathlight.org" title="PathLight International">PathLight International</a></li>
-											</ul>
-									</div>
-
-
-									<!-- about Technovation -->
-									<div class="col-4">
-											<h4>Nondiscrimination</h4>
-												MSU WIE does not unlawfully discriminate.
-												All events and programs are open to students of all genders.<br>
-												<a href="https://civilrights.msu.edu/policies/" target="_blank">Notice of Nondiscrimanation</a>
-									</div>
-
-							</div> <!-- /.row -->
-					</div> <!-- /.box -->
-
-						<ul class="copyright">
-							<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
-							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div> <!-- inner -->
-
-				</footer>
-
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+SS2023/team.html
