--- a/belizeweb/index.html
+++ b/belizeweb/index.html
@@ -1,319 +1,1 @@
-<!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>MSU x PathLight Belize Coding Club</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
-
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/msu-pathlight-logo-small.png" alt="MSU x PathLight Coding Clubs Logo" /></span><span class="title">MSU x PathLight Coding Clubs</span>
-								</a>
-
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
-
-						</div>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="news.html">News</a></li>
-							<li><a href="clubs.html">Cohorts</a></li>
-							<li><a href="resources.html">Resources</a></li>
-							<li><a href="team.html">Team</a></li>
-							<li><a href="supporters.html">Supporters</a></li>
-						</ul>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<h1>SS 22 MSU x PathLight Coding Club</h1>
-								<h2><italic>Teach a girl to code and she will change the world.</italic></h2>
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/sgwc-353x326r72.png" alt="Young coder looking up from her screen in a computer lab on the MSU campus at a SGWC meeting." />
-									</span>
-									<a href="#about">
-										<h2>What, Why  &amp; Who</h2>
-										<div class="content">
-											<p>What are MSU x PathLight Coding Clubs and why might you join one?</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/cameron-wilkins-VWs4tYtWkAo-unsplash-353x326r72.jpeg" alt="Photo of countryside homes in Belize. Large grassy hillside, dirt road, several pastel-colored homes" />
-									</span>
-									<a href="news.html">
-										<h2>News</h2>
-										<div class="content">
-											<p>Stay up to date with all announcements and activities .</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/sgwc2-353x327r72.png" alt="Coder receiving instructions from a SGWC mentor in a computer lab on the MSU campus." />
-									</span>
-									<a href="clubs.html">
-										<h2>Cohorts</h2>
-										<div class="content">
-											<p>A club is organized into several cohorts for remote meetings.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/name-tags-353x326r72.jpg" alt="Photo of a gray table with colored name tags strewn on it." />
-									</span>
-									<a href="resources.html">
-										<h2>Resources</h2>
-										<div class="content">
-											<p>Find useful resources for learning about coding.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/mentorsAtHockeySS22-353x326r72.jpeg" alt="Photo of SGWC Mentors at a Spartan hockey game." />
-									</span>
-									<a href="team.html">
-										<h2>Team</h2>
-										<div class="content">
-											<p>Meet the MSU and PathLight team.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/robin-canfield-PX3SB8zsbfk-unsplash-353x326r72.jpeg" alt="Photo of Mayan ruins in Mountain Pine Ridge Reserve. Green grass area under blue sky." />
-									</span>
-									<a href="supporters.html">
-										<h2>Supporters</h2>
-										<div class="content">
-											<p>Meet our current supporters. Learn how to join them.</p>
-										</div>
-									</a>
-								</article>
-							</section>
-
-							<section>
-								<p>
-									Photo of homes in the Belizean countryside by <a href="https://unsplash.com/@ccamwilkins?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Cameron Wilkins</a> and of
-									Mayan ruin in Mountain Pine Ridge Forest Reserve by <a href="https://unsplash.com/@robincanfield?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Robin Canfield</a> on <a href="https://unsplash.com/s/photos/belize?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
-									Remaining photos from prior <a href="https://msu-cse-outreach.github.io/" target="_blank">Spartan Coding Clubs</a>.
-								</p>
-							</section>
-
-
-							<h1 id="about">About MSU x PathLight Coding Clubs</h1>
-
-							<h2>What</h2>
-							<p><span class="image left"><img src="images/msu-pathlight-logo-177x163r72.png" alt="The MSU Spartan Helmet logo and the PathLight logo on a green background." /></span>
-								A partnership between the <a href="https://www.egr.msu.edu/">College of Engineering at Michigan State University</a> and <a href="https://pathlight.org/">PathLight International</a>,
-								MSU x PathLight Coding Clubs offer computing instruction designed to be inclusive of all &mdash; but especially of girls and economically disadvantaged youth living in Belize.
-								MSU student-mentors guide Belizean secondary school-participants through a fun, engaging and empowering learning experience.
-								Together, mentors and participants explore how computing enables advances in virtually all disciplines.
-								They meet diverse role models, who are discovering technologies that transform lives.
-								Participants practice computational skills using Python Turtle Graphics.
-								In the last half of the session, they complete a collaborative project for the MSU x PathLight Coding Show Case.
-								They develop lasting friendships.
-							</p>
-
-							<p>
-								Spring 2022 Session:
-								<ul>
-									<li>
-										January 15 through February 26.
-									</li>
-									<li>
-										Saturdays 10a &mdash; 11:30a and Tuesdays 4p &mdash; 5:30p (Belize Time).
-									</li>
-									<li>
-										An optional Bonus Hour is offered weekly. Thursdays 5 pm (Belize Time).
-									</li>
-									<li>
-										To receive a Certificate of Completion, <italic> participants must attend at least 10 of the 12 scheduled meetings
-										and complete a final project.</italic>
-									</li>
-									<li>
-										A team of MSU mentors will visit select locations in Belize in the first week of March.
-									</li>
-								</ul>
-							</p>
-
-							<p>
-								The Spring 2022 MSU x PathLight Coding Club will consist of 3 cohorts of about 20 participants each.
-								All cohorts will meet virtually in accordance with current MSU policy for Youth Programs.
-								Participants will receive the Zoom login information by email in the week before the first meeting.
-								The information will be sent to the email address(es) provided at registration.
-								Participants should white-list <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu</a> to prevent notices from going to spam.
-							</p>
-							<p>
-								Remote meetings require use of a device with at least the capability of a Chromebook connected to the internet.
-								Although not required, we recommend the device is equipped with a webcam and microphone to permit full engagement with mentors and other participants.
-							</p>
-							<p>
-								Course software will run best in Chrome, but is compatible with other web browsers. The most recent version of Zoom should be used.
-							</p>
-
-
-							<h2>Why</h2>
-							<p><span class="image right"><img src="images/gwc-empowered227x163r72.png" alt="Photo of 4 girl coders feeling empowered at a SGWC Show Case" /></span>
-								<a href="https://www.unwomen.org/en/news/stories/2019/1/compilation-women-entrepreneurs" target="_blank"><blockquote>
-									The future of a globalized economy is female</blockquote>
-								</a>
-								In Belize, free education stops at age 12.
-								Many families cannot afford school fees for all of their children.
-								Secondary and tertiary education for sons is often prioritized over secondary education for daughters.
-								As a result, few girls have opportunity to learn important 21st century skills, like computing and information technology (CIT).
-								The CIT gender gap leaves girls ill prepared for the jobs of the future, which increasingly require strong computational skills.
-							</p>
-							<p>
-								MSU x PathLight Coding Clubs empower girls in communities that often undervalue girls' education to develop skills and creativity in using technology and inspire them to stay in school and eventually pursue careers in CIT.
-								The project builds participants' self-esteem, confidence, and skills.
-								It connects them to successful role models and mentors.
-								It broadens their horizons as they learn that careers in computing are important, flexible, rewarding, abundant, and satisfying.
-							</p>
-
-
-							<h2>Who</h2>
-							<p><span class="image left"><img src="images/belizean-flag-medium177x163r72.jpeg" alt="Drawing of the Belizean flag. White round seal on blue background with red top and bottom stripes. The seal contains two men holding tools, a shield, a tree, and greenery." /></span>
-								Girls and boys in 1st through 4th forms (9th and 12th grades) living in Belize.
-							</p>
-							<p>
-								The SS22 club is full.
-								Fill the <a href="https://forms.gle/Rm9toEsJvFZ1UQj16" target="_blank">MSU x PathLight Coding Clubs Interest Form</a> to receive notice of future offerings of Spartan Coding Clubs.
-							</p>
-						</div>
-					</div>
-
-
-									<!-- Footer -->
-										<!-- template version
-										<footer id="footer">
-											<div class="inner">
-												<section>
-													<h2>Get in touch</h2>
-													<form method="post" action="#">
-														<div class="fields">
-															<div class="field half">
-																<input type="text" name="name" id="name" placeholder="Name" />
-															</div>
-															<div class="field half">
-																<input type="email" name="email" id="email" placeholder="Email" />
-															</div>
-															<div class="field">
-																<textarea name="message" id="message" placeholder="Message"></textarea>
-															</div>
-														</div>
-														<ul class="actions">
-															<li><input type="submit" value="Send" class="primary" /></li>
-														</ul>
-													</form>
-												</section>
-												<section>
-													<h2>Follow</h2>
-													<ul class="icons">
-														<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-														<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-														<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-														<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-														<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-														<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-														<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-														<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-													</ul>
-												</section>
-												<ul class="copyright">
-													<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
-													<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-												</ul>
-											</div>
-										</footer>
-									-->
-
-									<footer id="footer">
-										<div class="inner">
-										<div class="box alt">
-											<div class="row gtr-uniform">
-
-														<!-- contact information -->
-														<div class="col-4">
-																<h4>Contact</h4>
-																428 S. Shaw Lane<br>
-																Engineering Building, Room 1410A<br>
-																Michigan State University<br>
-																East Lansing, MI 48824<br>
-																Phone: (517)884-0054<br>
-																Email: <a href="mailto:belizecc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">belizecc@egr.msu.edu</a>
-														</div>
-
-														<!-- links -->
-														<div class="col-4">
-																<h4>Links</h4>
-																<ul>
-																		<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
-																		<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
-																		<li><a href="https://pathlight.org" title="PathLight International">PathLight International</a></li>
-																</ul>
-														</div>
-
-
-														<!-- about Technovation -->
-														<div class="col-4">
-																<h4>Nondiscrimination</h4>
-																	MSU WIE does not unlawfully discriminate.
-																	All events and programs are open to students of all genders.<br>
-																	<a href="https://civilrights.msu.edu/policies/" target="_blank">Notice of Nondiscrimanation</a>
-														</div>
-
-												</div> <!-- /.row -->
-										</div> <!-- /.box -->
-
-											<ul class="copyright">
-												<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
-												<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-											</ul>
-										</div> <!-- inner -->
-
-									</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+SS2023/index.html
