updates for  SS22, Past Clubs instead of Cohorts

--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -93,10 +93,11 @@
 										Please white-list <em>belizecc@egr.msu.edu</em> so that your mailer does not label email that we send you as spam.
 										Send an email to <a href="mailto:belizecc@egr.msu.edu">belizecc@egr.msu.edu</a> if you have not received a notice with your cohort information by Tuesday morning.
 									</p>
-									<span class="image main"><img src="images/masked-sparty.jpeg" alt="Photo of the MSU Spartan Statue sporting a MSU mask."></span>
+									<span class="image main"><img src="images/microbit-workshop2.jpg" alt="Photo of the MSU Spartan Statue sporting a MSU mask."></span>
 
 									<p>
-										Banner photo by <a href="https://unsplash.com/@juliusdrost?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Julius Drost</a> on <a href="https://unsplash.com/s/photos/newspaper-background?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+										Workshop at PathLight International in which MSU mentors introduced
+                                        Belizean coders to programming Microbits. May 2022.
 									</p>
 								</div>
 							</section>
