--- a/belizeweb/SS2022/news.html
+++ b/belizeweb/SS2022/news.html
@@ -40,7 +40,8 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="../index.html">Home</a></li>
+							<li><a href="index.html">SS22 Home</a></li>
 							<li><a href="news.html">News</a></li>
 							<li><a href="clubs.html">Cohorts</a></li>
 							<li><a href="resources.html">Resources</a></li>
