--- a/belizeweb/SS2023/index.html
+++ b/belizeweb/SS2023/index.html
@@ -102,7 +102,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/mentorsAtHockeySS22-353x326r72.jpeg" alt="Photo of SGWC Mentors at a Spartan hockey game." />
+										<img src="images/BelizeSign-MSU2-pieced.png" alt="Photo of SGWC Mentors at a Spartan hockey game." />
 									</span>
 									<a href="team.html">
 										<h2>Team</h2>
