--- a/belizeweb/SS2023/team.html
+++ b/belizeweb/SS2023/team.html
@@ -55,85 +55,37 @@
 								<h1>Team</h1>
 								<div class="box alt">
 									<div class="row gtr-uniform">
-										<div class="col-12"><span class="image fit"><img src="images/2019 MSU mentors1152x326r72.jpg" alt="" /></span></div>
+										<div class="col-12"><span class="image fit"><img src="images/PathlightOW2022.jpg" alt="" /></span></div>
 
 										<!-- Mentors -->
 										<div class="col-12"><span><center><h2>MSU Student Mentors</h2></center></span></div>
 
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/andrew750x1000r72.jpg" alt="Photo of Andrew" /></span>
-											<center>
-												<h3>Andrew</h3>
-												Senior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/gigi750x1000r72.png" alt="Photo of Gigi" /></span>
-											<center>
-												<h3>Gigi</h3>
-												Senior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jonathan750x1000_78R.jpg" alt="Photo of Jonathon " /></span>
-											<center>
-												<h3>Jonathon</h3>
-												Senior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/katieA_750_1000_fixed72.jpg" alt="Photo of Katie A" /></span>
-											<center>
-												<h3>Katie A</h3>
-												Senior<br> Computer Engineering
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/sarah750x1000_78R.jpg" alt="Photo of Sarah" /></span>
-											<center>
-												<h3>Sarah</h3>
-												Senior<br> Computer Science
-											</center>
-										</div>
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/katie750x1000_72R-2.jpg" alt="Photo of Katie W" /></span>
 											<center>
 												<h3>Katie W</h3>
-												Junior<br> Computer Science
+												Senior<br> Computer Science
 											</center>
 										</div>
-
+                                        
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/carolineGormely750x1000r72.jpeg" alt="Photo of Caroline" /></span>
 											<center>
 												<h3>Caroline</h3>
-												Junior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/meganGendjar750x1000r72.jpeg" alt="Photo of Megan" /></span>
-											<center>
-												<h3>Megan</h3>
-												Masters<br> Crop and Soil Science
+												Senior<br> Computer Science
 											</center>
 										</div>
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
 											<center>
 												<h3>Khushi</h3>
-												Junior<br> Computer Science
+												Senior<br> Computer Science
 											</center>
 										</div>
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jessiccaHernandez750x1000_72R.png" alt="Photo of Jessicca" /></span>
 											<center>
-												<h3>Jessicca</h3>
-												Junior<br> Computer Science
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/davidVanderSloot750x1000r72.jpg" alt="Photo of David" /></span>
-											<center>
-												<h3>David</h3>
-												Senior<br> Computational Data Science
+												<h3>Jessika</h3>
+												Senior<br> Computer Science
 											</center>
 										</div>
 
@@ -148,30 +100,67 @@
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/daletyAveiro750x1000r72.jpeg" alt="Photo of Dalety" /></span>
 											<center>
 												<h3>Dalety</h3>
-												First Year<br>
+												Second Year<br>
 												Mechanical Engineering
-											</center>
-										</div>
-
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/joaoVitor750x1000_72R.jpeg" alt="Photo of Joao Vitor" /></span>
-											<center>
-												<h3>Joao Vitor</h3>
-												Junior<br>
-												Computer Science
 											</center>
 										</div>
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/judy750x1000.jpg" alt="Photo of Joao Vitor" /></span>
 											<center>
 												<h3>Judy</h3>
-												Junior<br>
+												Senior<br>
 												Computer Science
 											</center>
 										</div>
 
 
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Emily" /></span>
+											<center>
+												<h3>Emily</h3>
+												Student<br>
+												Major
+											</center>
+										</div>
+
+
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Sammy" /></span>
+											<center>
+												<h3>Sammy</h3>
+												Student<br>
+												Major
+											</center>
+										</div>
+
+
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Najiha" /></span>
+											<center>
+												<h3>Najiha</h3>
+												Student<br>
+												Major
+											</center>
+										</div>
+
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Benjamin" /></span>
+											<center>
+												<h3>Benjamin</h3>
+												Student<br>
+												Major
+											</center>
+										</div>
+
+
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Tanvi" /></span>
+											<center>
+												<h3>Tanvi</h3>
+												Student<br>
+												Major
+											</center>
+										</div>
+
+
+
 										<!-- Advisors -->
-										<div class="col-12"><span><center><h2>MSU &amp; PathLight Advisers</h2><center></span></div>
+                                        <div class="col-12"><span><center><h2>MSU &amp; PathLight Advisers</h2></center></span></div>
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/consueloGodfrey750x1000.jpeg" alt="Photo of Consuelo" /></span>
 											<center>
@@ -179,7 +168,6 @@
 												Director of Teacher Training<br>PathLight International<br>Belize
 											</center>
 										</div>
-
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/teresa750x1000_78R.jpg" alt="Photo of Teresa" /></span>
 											<center>
@@ -204,8 +192,6 @@
 										</div>
 
 
-
-									</div>
 								</div>
 							</section>
 						</div>
