update clubs and teams pages

--- a/belizeweb/SS2023/team.html
+++ b/belizeweb/SS2023/team.html
@@ -123,7 +123,7 @@
 										</div>
 
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Sammy" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/sammyhead750x1000r72.jpeg" alt="Photo of Sammy" /></span>
 											<center>
 												<h3>Sammy</h3>
 												Student<br>
@@ -132,7 +132,7 @@
 										</div>
 
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Najiha" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/NajihaJaigirdar750x1000_72R.jpg" alt="Photo of Najiha" /></span>
 											<center>
 												<h3>Najiha</h3>
 												Student<br>
@@ -188,6 +188,22 @@
 											<center>
 												<h3>Emily</h3>
 												Assistant Professor<br> Comp. Sci. &amp; Eng.<br>MSU
+											</center>
+										</div>
+
+
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/Onsay.Sebnem750x1000_72R.jpg" alt="Photo of Onsay" /></span>
+											<center>
+												<h3>Onsay</h3>
+												Teaching Professor<br> Comp. Sci. &amp; Eng.<br>MSU
+											</center>
+										</div>
+
+
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/Oyendrila%20Dobe750x1000r72.jpeg" alt="Photo of Emily" /></span>
+											<center>
+												<h3>Oyendrila</h3>
+												PhD Student<br> Comp. Sci. &amp; Eng.<br>MSU
 											</center>
 										</div>
 
