update navigation menu to say 'Past Clubs'

--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -42,7 +42,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="news.html">News</a></li>
-							<li><a href="clubs.html">Cohorts</a></li>
+							<li><a href="clubs.html">Past Clubs</a></li>
 							<li><a href="resources.html">Resources</a></li>
 							<li><a href="team.html">Team</a></li>
 							<li><a href="supporters.html">Supporters</a></li>
