--- a/belizeweb/SS2023/team.html
+++ b/belizeweb/SS2023/team.html
@@ -66,28 +66,30 @@
 												<h3>Katie W</h3>
 												Senior<br> Computer Science
 											</center>
-										</div>
+										</div><!-- Katie -->
                                         
+                                        <!--
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/carolineGormely750x1000r72.jpeg" alt="Photo of Caroline" /></span>
 											<center>
 												<h3>Caroline</h3>
 												Senior<br> Computer Science
 											</center>
 										</div>
+                                        -->
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
 											<center>
 												<h3>Khushi</h3>
 												Senior<br> Computer Science
 											</center>
-										</div>
+										</div><!-- Khushi -->
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jessiccaHernandez750x1000_72R.png" alt="Photo of Jessicca" /></span>
 											<center>
 												<h3>Jessika</h3>
 												Senior<br> Computer Science
 											</center>
-										</div>
+										</div><!-- Jessika -->
 
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/ryan750x1000r72.png" alt="Photo of Ryan" /></span>
@@ -95,7 +97,7 @@
 												<h3>Ryan</h3>
 												Senior<br> Applied Engineering
 											</center>
-										</div>
+										</div><!-- Ryan -->
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/daletyAveiro750x1000r72.jpeg" alt="Photo of Dalety" /></span>
 											<center>
@@ -103,7 +105,7 @@
 												Second Year<br>
 												Mechanical Engineering
 											</center>
-										</div>
+										</div><!-- Dalety -->
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/judy750x1000.jpg" alt="Photo of Joao Vitor" /></span>
 											<center>
@@ -111,16 +113,7 @@
 												Senior<br>
 												Computer Science
 											</center>
-										</div>
-
-
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Emily" /></span>
-											<center>
-												<h3>Emily</h3>
-												Student<br>
-												Major
-											</center>
-										</div>
+										</div> <!--Judy-->
 
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/sammyhead750x1000r72.jpeg" alt="Photo of Sammy" /></span>
@@ -129,7 +122,7 @@
 												Student<br>
 												Major
 											</center>
-										</div>
+										</div><!-- Sammy -->
 
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/NajihaJaigirdar750x1000_72R.jpg" alt="Photo of Najiha" /></span>
@@ -138,7 +131,7 @@
 												Student<br>
 												Major
 											</center>
-										</div>
+										</div><!-- Najiha -->
 
 										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Benjamin" /></span>
 											<center>
@@ -146,7 +139,7 @@
 												Student<br>
 												Major
 											</center>
-										</div>
+										</div><!-- Benjamin -->
 
 
 										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Tanvi" /></span>
@@ -155,7 +148,34 @@
 												Student<br>
 												Major
 											</center>
-										</div>
+										</div><!--Tanvi-->
+
+
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Emily" /></span>
+											<center>
+												<h3>Emily</h3>
+												Student<br>
+												Major
+											</center>
+										</div><!-- Emily -->
+
+
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Joshua" /></span>
+											<center>
+												<h3>Joshua</h3>
+												Student<br>
+												Major
+											</center>
+										</div><!-- Joshua -->
+
+
+										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Madhav" /></span>
+											<center>
+												<h3>Madhav</h3>
+												Student<br>
+												Major
+											</center>
+										</div><!-- Madhav -->
 
 
 
@@ -167,21 +187,37 @@
 												<h3>Consuelo</h3>
 												Director of Teacher Training<br>PathLight International<br>Belize
 											</center>
-										</div>
+										</div><!-- Consuelo -->
+
+
+										<div class="col-4"><span class="image fit"><img src="images/pathlight_belize_black_square750x1000r72.png" alt="Photo of Adelle" /></span>
+											<center>
+												<h3>Adelle</h3>
+												Position<br>PathLight International<br>Belize
+											</center>
+										</div><!-- Adelle -->
+
+
+										<div class="col-4"><span class="image fit"><img src="images/pathlight_belize_black_square750x1000r72.png" alt="Photo of Elvira" /></span>
+											<center>
+												<h3>Elvira</h3>
+												Position<br>PathLight International<br>Belize
+											</center>
+										</div><!-- Elvira -->
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/teresa750x1000_78R.jpg" alt="Photo of Teresa" /></span>
 											<center>
 												<h3>Teresa</h3>
 												Director<br>WIE Recruitment &amp; K12 Outreach<br>MSU
 											</center>
-										</div>
+										</div><!--Teresa-->
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/LaurieCSforALL.jpg" alt="Photo of Laura" /></span>
 											<center>
 												<h3>Laura</h3>
 												Professor Emeritus<br> Comp. Sci. &amp; Eng.<br>MSU
 											</center>
-										</div>
+										</div><!--Laura-->
 
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/emily750x1000_78R.jpg" alt="Photo of Emily" /></span>
@@ -189,7 +225,7 @@
 												<h3>Emily</h3>
 												Assistant Professor<br> Comp. Sci. &amp; Eng.<br>MSU
 											</center>
-										</div>
+										</div><!-- Emily -->
 
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/Onsay.Sebnem750x1000_72R.jpg" alt="Photo of Onsay" /></span>
@@ -197,18 +233,35 @@
 												<h3>Onsay</h3>
 												Teaching Professor<br> Comp. Sci. &amp; Eng.<br>MSU
 											</center>
-										</div>
+										</div><!-- Onsay -->
 
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/Oyendrila%20Dobe750x1000r72.jpeg" alt="Photo of Emily" /></span>
 											<center>
 												<h3>Oyendrila</h3>
-												PhD Student<br> Comp. Sci. &amp; Eng.<br>MSU
+												PhD Student<br>Comp. Sci. &amp; Eng.<br>MSU
 											</center>
-										</div>
+										</div><!-- Oyendrila -->
 
 
-								</div>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/MikaylaNorton750x1000r72.jpeg" alt="Photo of Mikayla" /></span>
+											<center>
+												<h3>Mykayla</h3>
+												Masters Student<br> Data Science<br>MSU
+											</center>
+										</div><!-- Mikayla -->
+
+
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/JuliaZheng.jpeg" alt="Photo of Julia" /></span>
+											<center>
+												<h3>Julia</h3>
+												PhD Student<br>Comp. Sci. &amp; Eng.<br>MSU
+											</center>
+										</div><!-- Julia -->
+
+                                        
+                                    </div>
+                                </div>
 							</section>
 						</div>
 					</div>
