--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -156,12 +156,12 @@
 									<div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
 										<div class="row">
 											<div class="col-md-12" align="middle">
-												<img class="shadow-lg" src="Images/Lessons/Week1/bluecohortclubrules.png" width=75%>
+												<img class="shadow-lg" src="Images/Lessons/Week1/icebreaker.png" width=75%>
 											</div>
 										</div>
 										<br>
 										<div class="row">
-											<p><i>One of our Jamboards from the Blue Cohort - all very good ideas!</i></p>
+											<p><i>An example of the Ice Breaker!</i></p>
 										</div>
 									</div>
 									<p>
@@ -182,10 +182,10 @@
 									<div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="assets/img/ss22photos/week1/blackcohortcontract.PNG" height=300px>
+												<img class="shadow-lg" src="Images/Lessons/Week1/bluecohortclubrules.png" height=300px>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="assets/img/ss22photos/week1/tealcohortcontract.PNG" height=300px>
+												<img class="shadow-lg" src="Images/Lessons/Week1/greencohortclubrules.png" height=300px>
 											</div>
 										</div>
 										<br>
@@ -234,19 +234,19 @@
 												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I took Java as an elective my sophomore year in high school and found it very challenging but fun!
+													I took an AP Computer Science Class in High School and really enjoyed content. I was also involved in Girls Who Code at my High School.
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													One of my favorite memories is creating and teaching a summer coding camp in my hometown with fellow mentor Natalie K :)
+													I developed a Face Detection algorithm in my Biometrics Course.
 												</p>
 												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													I don’t have any specific project I plan to work on but I hope to continue doing Computer Science outreach wherever I end up!
+													I am hoping to continue working in Computer Science and ultimately continue to influence and empower the younger generation!
 												</p>
 												<p>
 													<b>What advice do you have for our students?</b><br>
-													You don’t always have to be good at your hobbies as long as you love doing them — keep at it and you will get better!
+													No matter how frustrating it might get, don't give up - the end reward is so worth it. Enjoy it and have fun!
 												</p>
 											</div>
 											<div class="col-md-6" align="left"> <!-- Khushi -->
@@ -275,7 +275,7 @@
 										</div>
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="" height="350">
+												<img class="shadow-lg" src="Images/MentorImages/katie750x1000_72R-2.jpg" height="350">
 												<br><br>
 												<p><i>Katie White</i></p>
 											</div>
